<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.thomas.dijoncity.Activities.AddTripActivity"
    android:padding="10dp">

    <TextView
        android:id="@+id/textViewCinemas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_cinema" />

    <Spinner
        android:id="@+id/spinnerCinemas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewCinemas" />

    <TextView
        android:id="@+id/textViewRestaurants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerCinemas"
        android:text="@string/label_restaurant" />

    <Spinner
        android:id="@+id/spinnerRestaurants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewRestaurants" />

    <TextView
        android:id="@+id/textViewPredictedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerRestaurants"
        android:text="@string/label_date" />

    <DatePicker
        android:id="@+id/datePickerPredictedDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:layout_below="@+id/textViewPredictedDate" />

    <TextView
        android:id="@+id/textViewComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/datePickerPredictedDate"
        android:text="@string/label_comment" />

    <EditText
        android:id="@+id/editTextComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewComment" />

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextComment"
        android:text="@string/label_status" />

    <Spinner
        android:id="@+id/spinnerStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewStatus" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerStatus"
        android:text="@string/save" />
</RelativeLayout>